--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 web3==6.11.3
 python-dotenv==1.0.0
-hexbytes~=0.3.0
-aiohttp~=3.8.4
-requests==2.31.0
+hexbytes==0.3.1
+aiohttp==3.10.11
+requests==2.32.3
